objects/Sales_Org__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Orgs</relationshipLabel>
        <relationshipName>Sales_Orgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>App_Description__c</fullName>
        <description>populated via Sales Org trigger from Application object</description>
        <label>Application</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>populated via integration</description>
        <label>SAP Application Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Sales_Org__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit Block on Sales Org</description>
        <label>Credit Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incoterms__c</fullName>
        <description>Incoterms integrated from SAP</description>
        <label>Incoterms</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>populated via Sales Org trigger from Application object</description>
        <label>Market Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <label>Payment terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Account_Id__c</fullName>
        <description>Used for KNVH integration</description>
        <externalId>true</externalId>
        <label>SAP Account Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Account_Sales_Org__c</fullName>
        <externalId>true</externalId>
        <label>SAP_Account_Sales_Org</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SAP_Sales_Org__c</fullName>
        <description>SAP KNVH integration field</description>
        <externalId>true</externalId>
        <label>SAP Sales Org</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Description__c</fullName>
        <formula>Sales_Org__r.Name</formula>
        <label>Sales Org Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Sales org lookup from Sales Org Master</description>
        <inlineHelpText>Sales org lookup from Sales Org Master</inlineHelpText>
        <label>Sales Org</label>
        <referenceTo>Sales_Org_Master__c</referenceTo>
        <relationshipLabel>Sales Orgs</relationshipLabel>
        <relationshipName>Sales_Orgs</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>